[bug] add jump to top button

--- a/src/components/Carousel/ControlItem.module.scss
+++ b/src/components/Carousel/ControlItem.module.scss
@@ -1,7 +1,7 @@
 .slickItem {
    display: inline-block;
    height: inherit;
-   min-width: calc(20% - 1px);
+   min-width: 20%;
    max-width: 100%;
 
    span {
