--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -1,9 +1,7 @@
 @import "../library";
 
 .wrapper {
-   max-width: $content-width;
-   height: 380px;
-   margin: auto;
+   height: 380;
    margin-top: $header-height;
    padding: 15px 0;
 }
